tests/baselines/reference/declFileAmbientExternalModuleWithSingleExportedModule.errors.txt
declFileAmbientExternalModuleWithSingleExportedModule_1.ts(2,1): error TS18056: Declaration file contains synthesized file reference directives: '"declFileAmbientExternalModuleWithSingleExportedModule_0.d.ts"'


==== declFileAmbientExternalModuleWithSingleExportedModule_1.ts (1 errors) ====
    ///<reference path='declFileAmbientExternalModuleWithSingleExportedModule_0.ts'/>
    import SubModule = require('SubModule');
    ~~~~~~
!!! error TS18056: Declaration file contains synthesized file reference directives: '"declFileAmbientExternalModuleWithSingleExportedModule_0.d.ts"'
    export var x: SubModule.m.m3.c;
    
    
==== declFileAmbientExternalModuleWithSingleExportedModule_0.ts (0 errors) ====
    declare module "SubModule" {
        export module m {
            export module m3 {
                interface c {
                }
            }
        }
    }
    